--- a/assets/main.css
+++ b/assets/main.css
@@ -10,16 +10,23 @@ form {
     border-radius: 10px;
     background-color: #f9f9f9;
 }
-.from-group {
-    margin-bottom: 20px;
-}
-label {
-    width: 100px;
+.form-group {
+    display: flex;
+    flex-direction: column;
     text-align: left;
-    margin-bottom: 10px;
 }
+.radio-group{
+    text-align: left;
+}
+
+label {
+    margin-bottom: 10px;
+    font-size: 16px;
+    font-weight: bold;
+}
+
 input[type="number"] {
-    width: calc(100% - 110px);
+    width: 100%;
     padding: 5px;
     border-radius: 5px;
     border: 1px solid #ccc;
