--- a/assets/main.css
+++ b/assets/main.css
@@ -81,3 +81,13 @@ h2{
     font-size: 24px;
     color: #4caf50;
 }
+.developedBy{
+    margin-top: 20px;
+    font-size: 14px;
+    color: #4caf50;
+    border : 1px solid #4caf50;
+    padding: 10px;
+    border-radius: 5px;
+    width: 400px;
+    margin: 0 auto;
+}
